added tags to articles and url to links

--- a/_posts/2015-03-05-project-1.md
+++ b/_posts/2015-03-05-project-1.md
@@ -5,6 +5,7 @@ date:   2015-03-06 08:15:03
 categories: project
 featured: true
 featured_image: '/images/project.png'
+tags: design
 ---
 
 ## Aestu illis Somnia
